scripts/nullness/annotator/url9d1719148e_mrqsdavi_pegmachine_tgz-pJ8-peg_RegexJ8.txt
../annotator/url9d1719148e_mrqsdavi_pegmachine_tgz-pJ8-peg_RegexJ8/src/peg/Regex.java:10: error: package com.uber.nullaway.annotations does not exist
import com.uber.nullaway.annotations.Initializer;
                                    ^
../annotator/url9d1719148e_mrqsdavi_pegmachine_tgz-pJ8-peg_RegexJ8/src/peg/Regex.java:78: error: cannot find symbol
	@Initializer public ArrayList<Instrucao> instrucoes(@Nullable Padrao padrao){
	 ^
  symbol:   class Initializer
  location: class Regex
Note: ../annotator/url9d1719148e_mrqsdavi_pegmachine_tgz-pJ8-peg_RegexJ8/src/peg/EstadoMaquina.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
2 errors
